--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <meta name="description" content="binaries, sources of unreleased versions">
     <meta name="author" content="">
 
+    <script type="text/javascript">
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-39073912-1']);
+_gaq.push(['_trackPageview']);
+
+(function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+    </script>
+
     <!-- CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
