Added build status with CloudBees service

--- a/index.html
+++ b/index.html
@@ -106,6 +106,13 @@ _gaq.push(['_trackPageview']);
 
       <div class="container">
 
+        <div class="well well-small">
+          Build Status with CloudBees:
+          <a href="https://buildhive.cloudbees.com/job/primefaces/job/primefaces/">
+            <img src="https://buildhive.cloudbees.com/job/primefaces/job/primefaces/badge/icon"/>
+          </a>
+        </div>
+
         <h3>Unofficial Releases</h3>
 
         <p>Unofficial Maven Repository for unreleased PrimeFaces versions.</p>
