Added alert for no artifatcs for themes.

--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@ _gaq.push(['_trackPageview']);
 &lt;/repository&gt;
 </pre>
 
+	<p class="alert alert-danger">This unofficial repository <b>contains no</b> artifacts for <b>themes<b>.</p>
+
         <h3>Lastest Official Release</h3>
 
         <table class="table table-bordered table-hover">
