Added changelog for 3.5.1 unofficial release.

--- a/index.html
+++ b/index.html
@@ -8,69 +8,14 @@
     <meta name="author" content="">
 
     <!-- CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <style type="text/css">
-
-      /* Sticky footer styles
-      -------------------------------------------------- */
-
-      html,
-      body {
-        height: 100%;
-        /* The html and body elements cannot have any padding or margin. */
-      }
-
-      /* Wrapper for page content to push down footer */
-      #wrap {
-        min-height: 100%;
-        height: auto !important;
-        height: 100%;
-        /* Negative indent footer by it's height */
-        margin: 0 auto -60px;
-      }
-
-      /* Set the fixed height of the footer here */
-      #push,
-      #footer {
-        height: 60px;
-      }
-      #footer {
-        background-color: #f5f5f5;
-      }
-
-      /* Lastly, apply responsive CSS fixes as necessary */
-      @media (max-width: 767px) {
-        #footer {
-          margin-left: -20px;
-          margin-right: -20px;
-          padding-left: 20px;
-          padding-right: 20px;
-        }
-      }
-
-
-      /* Custom page CSS
-      -------------------------------------------------- */
-      /* Not required for template or sticky footer method. */
-
-      #wrap > .container {
-        padding-top: 60px;
-      }
-      .container .credit {
-        margin: 20px 0;
-      }
-
-      code {
-        font-size: 80%;
-      }
-
-    </style>
-    <link href="assets/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="assets/css/google-code-prettify.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/site.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/assets/css/google-code-prettify.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
+      <script src="/assets/js/html5shiv.js"></script>
     <![endif]-->
 
     <script type="text/javascript">
@@ -99,7 +44,7 @@ _gaq.push(['_trackPageview']);
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">PrimeFaces <span class="label label-important">unofficial</span></a>
+            <a class="brand" href="/">PrimeFaces <span class="label label-important">unofficial</span></a>
           </div>
         </div>
       </div>
@@ -124,6 +69,7 @@ _gaq.push(['_trackPageview']);
             <th>Base</th>
             <th>Binary</th>
             <th>Sources</th>
+            <th>Notes</th>
           </tr>
           </thead>
           <tbody>
@@ -132,6 +78,7 @@ _gaq.push(['_trackPageview']);
             <td><a href="http://code.google.com/p/primefaces/source/browse/primefaces/trunk?r=8807" title="2013-03-16 06:59:30 UTC">r8807</a></td>
             <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.1-UR/primefaces-3.5.1-UR.jar">primefaces-3.5.1-UR.jar</a>
             <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.1-UR/primefaces-3.5.1-UR-sources.jar">primefaces-3.5.1-UR-sources.jar</a>
+            <td><a href="/changelog/3.5.1.html">ChangeLog</td>
           </tr>
         </table>
 
@@ -146,7 +93,7 @@ _gaq.push(['_trackPageview']);
 &lt;/repository&gt;
 </pre>
 
-	<p class="alert alert-danger">This unofficial repository <b>contains no</b> artifacts for <b>themes<b>.</p>
+        <p class="alert alert-danger">This unofficial repository <b>contains no</b> artifacts for <b>themes</b>.</p>
 
         <h3>Lastest Official Release</h3>
 
@@ -183,9 +130,9 @@ _gaq.push(['_trackPageview']);
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/google-code-prettify.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/google-code-prettify.js"></script>
 
     <script type="text/javascript">
 !function ($) {
