Adjustments for clearer messages.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ _gaq.push(['_trackPageview']);
 
         <h3>Unofficial Releases</h3>
 
-        <p>Unofficial Maven Repository for unreleased PrimeFaces versions.</p>
+        <p>Unofficial Maven Repository for non-publicly released PrimeFaces versions.</p>
 
         <table class="table table-bordered table-hover">
           <thead>
@@ -93,7 +93,7 @@ _gaq.push(['_trackPageview']);
 &lt;/repository&gt;
 </pre>
 
-        <p class="alert alert-danger">This unofficial repository <b>contains no</b> artifacts for <b>themes</b>.</p>
+        <p class="alert alert-danger">This unofficial repository <b>does not contain</b> artifacts for <b>themes</b>. Therefore, keep the official repository in your POM.</p>
 
         <h3>Lastest Official Release</h3>
 
