Added unofficial release 3.5.2-UR

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@ _gaq.push(['_trackPageview']);
             <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.1-UR/primefaces-3.5.1-UR-sources.jar">primefaces-3.5.1-UR-sources.jar</a>
             <td><a href="/changelog/3.5.1.html">ChangeLog</td>
           </tr>
+          <tr>
+            <td>3.5.2-UR</td>
+            <td><a href="http://code.google.com/p/primefaces/source/browse/primefaces/trunk?r=8865" title="2013-03-31 13:54:19 UTC">r8865</a></td>
+            <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.2-UR/primefaces-3.5.2-UR.jar">primefaces-3.5.2-UR.jar</a>
+            <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.2-UR/primefaces-3.5.2-UR-sources.jar">primefaces-3.5.2-UR-sources.jar</a>
+            <td><a href="/changelog/3.5.2.html">ChangeLog</td>
+          </tr>
+          </tbody>
         </table>
 
         <p>Downloading <strong>official</strong> and <strong>unofficial</strong> releases with Maven:</p>
