--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@ _gaq.push(['_trackPageview']);
           <tr>
             <td>3.5.2-UR</td>
             <td><a href="http://code.google.com/p/primefaces/source/browse/primefaces/trunk?r=8865" title="2013-03-31 13:54:19 UTC">r8865</a></td>
-            <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.2-UR/primefaces-3.5.2-UR.jar">primefaces-3.5.2-UR.jar</a>
-            <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.2-UR/primefaces-3.5.2-UR-sources.jar">primefaces-3.5.2-UR-sources.jar</a>
-            <td><a href="/changelog/3.5.2.html">ChangeLog</td>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.2-UR/primefaces-3.5.2-UR.jar">primefaces-3.5.2-UR.jar</a>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.2-UR/primefaces-3.5.2-UR-sources.jar">primefaces-3.5.2-UR-sources.jar</a>
+            <td><a href="/changelog/3.5.2.html">ChangeLog</a></td>
           </tr>
           <tr>
             <td>3.5.1-UR</td>
             <td><a href="http://code.google.com/p/primefaces/source/browse/primefaces/trunk?r=8807" title="2013-03-16 06:59:30 UTC">r8807</a></td>
-            <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.1-UR/primefaces-3.5.1-UR.jar">primefaces-3.5.1-UR.jar</a>
-            <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5.1-UR/primefaces-3.5.1-UR-sources.jar">primefaces-3.5.1-UR-sources.jar</a>
-            <td><a href="/changelog/3.5.1.html">ChangeLog</td>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.1-UR/primefaces-3.5.1-UR.jar">primefaces-3.5.1-UR.jar</a>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.1-UR/primefaces-3.5.1-UR-sources.jar">primefaces-3.5.1-UR-sources.jar</a>
+            <td><a href="/changelog/3.5.1.html">ChangeLog</a></td>
           </tr>
           </tbody>
         </table>
@@ -96,7 +96,7 @@ _gaq.push(['_trackPageview']);
 &lt;repository&gt;
   &lt;id&gt;prime-github-repo&lt;/id&gt;
   &lt;name&gt;Unofficial PrimeFaces Maven Repository&lt;/name&gt;
-  &lt;url&gt;http://primefaces.github.com/repository&lt;/url&gt;
+  &lt;url&gt;http://primefaces.github.io/repository&lt;/url&gt;
   &lt;layout&gt;default&lt;/layout&gt;
 &lt;/repository&gt;
 </pre>
@@ -116,8 +116,8 @@ _gaq.push(['_trackPageview']);
           <tbody>
           <tr>
             <td>3.5</td>
-            <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5/primefaces-3.5.jar">primefaces-3.5.jar</a>
-            <td><a href="http://primefaces.github.com/repository/org/primefaces/primefaces/3.5/primefaces-3.5-sources.jar">primefaces-3.5-sources.jar</a>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5/primefaces-3.5.jar">primefaces-3.5.jar</a>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5/primefaces-3.5-sources.jar">primefaces-3.5-sources.jar</a>
           </tr>
           </tbody>
         </table>
