--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@ _gaq.push(['_trackPageview']);
           </thead>
           <tbody>
           <tr>
+            <td>3.5.3-UR</td>
+            <td><a href="http://code.google.com/p/primefaces/source/browse/primefaces/trunk?r=9003" title="2013-04-22 14:32:25 UTC">r9003</a></td>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.3-UR/primefaces-3.5.3-UR.jar">primefaces-3.5.3-UR.jar</a>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.3-UR/primefaces-3.5.3-UR-sources.jar">primefaces-3.5.3-UR-sources.jar</a>
+            <td><a href="/changelog/3.5.3.html">ChangeLog</a></td>
+          </tr>
+          <tr>
             <td>3.5.2-UR</td>
             <td><a href="http://code.google.com/p/primefaces/source/browse/primefaces/trunk?r=8865" title="2013-03-31 13:54:19 UTC">r8865</a></td>
             <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.2-UR/primefaces-3.5.2-UR.jar">primefaces-3.5.2-UR.jar</a>
