Added unofficial release 3.5.4-UR

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@ _gaq.push(['_trackPageview']);
           </thead>
           <tbody>
           <tr>
+            <td>3.5.4-UR</td>
+            <td><a href="http://code.google.com/p/primefaces/source/browse/primefaces/trunk?r=9175" title="2013-05-13 10:07:49 UTC">r9175</a></td>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.4-UR/primefaces-3.5.4-UR.jar">primefaces-3.5.4-UR.jar</a>
+            <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.4-UR/primefaces-3.5.4-UR-sources.jar">primefaces-3.5.4-UR-sources.jar</a>
+            <td><a href="/changelog/3.5.4.html">ChangeLog</a></td>
+          </tr>
+          <tr>
             <td>3.5.3-UR</td>
             <td><a href="http://code.google.com/p/primefaces/source/browse/primefaces/trunk?r=9003" title="2013-04-22 14:32:25 UTC">r9003</a></td>
             <td><a href="http://primefaces.github.io/repository/org/primefaces/primefaces/3.5.3-UR/primefaces-3.5.3-UR.jar">primefaces-3.5.3-UR.jar</a>
