--- a/changelog/3.5.2.html
+++ b/changelog/3.5.2.html
@@ -1,195 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Unofficial PrimeFaces</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="binaries, sources of unreleased versions">
-    <meta name="author" content="">
+---
+layout:  changelog
+release: 3.5.2
 
-    <!-- CSS -->
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/css/site.css" rel="stylesheet">
-    <link href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <link href="/assets/css/google-code-prettify.css" rel="stylesheet">
+changelog:
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="/assets/js/html5shiv.js"></script>
-    <![endif]-->
+  defects:
+   - num: 4474
+     txt: "Spinner ignores min/max on keyboard input"
+   - num: 4489
+     txt: "AutoComplete: ui-state-disabled selector isn't rendered for the button when dropdown=true"
+   - num: 4493
+     txt: "SelectOneButton / SelectManyButton options not visually selectable after validation error"
+   - num: 4535
+     txt: "Decimal formatting broken in spinner"
+   - num: 4576
+     txt: "AutoComplete onstart ignores return value"
+   - num: 4691
+     txt: "Calendar component vulnerable to XSS attack"
+   - num: 5255
+     txt: "TreeTable throws IndexOutOfBoundsException"
+   - num: 5310
+     txt: "Allow ajax update on p:clock"
+   - num: 5336
+     txt: "Missing resource dependency for Growl and Panel"
+   - num: 5371
+     txt: "selectBooleanCheckbox itemLabel is not displayed to the right of the check box"
+   - num: 5383
+     txt: "Tree renders p:treeNode with rendered=\"false\""
+   - num: 5386
+     txt: "Spinner displays null with prefix-suffix and null value"
+   - num: 5387
+     txt: "Spinner should not change empty value to zero on focus"
+   - num: 5388
+     txt: "Filtering fails with input components inside DataTable"
+   - num: 5389
+     txt: "AutoComplete oncomplete callback ignored."
+   - num: 5409
+     txt: "Inconsistent behavior p:calendar  today button on IE and non IE"
+   - num: 5418
+     txt: "Event-Input Processing Broken with Dynamic Columns"
 
-    <script type="text/javascript">
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-39073912-1']);
-_gaq.push(['_trackPageview']);
+  enhancements:
+   - num: 3652
+     txt: "Add clear button to remove FileUpload Messages"
+   - num: 5334
+     txt: "ReadOnly check for collapsed ValueExpression of Panel"
+   - num: 5378
+     txt: "Update to jQplot 1.0.8"
 
-(function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-    </script>
+  new_features:
+   - num: 4330
+     txt: "Facet feature for Inplace"
+   - num: 4543
+     txt: "Add .ui-panelgrid-even .ui-panelgrid-odd styleClass to panelGrid"
+   - num: 4780
+     txt: "Accordion Panel: impossible to register listener on tab close (collapse)"
 
-  </head>
+---
 
-  <body>
-
-    <div id="wrap">
-
-      <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-          <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="/">PrimeFaces <span class="label label-important">unofficial</span></a>
-          </div>
-        </div>
-      </div>
-
-      <div class="container">
-
-        <h3>3.5.2 (2013-04-01) <i>unofficial</i></h3>
-
-        <h4>Defects</h4>
-
-        <ul>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4474">Issue 4474</a>
-            Spinner ignores min/max on keyboard input
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4489">Issue 4489</a>
-            AutoComplete: ui-state-disabled selector isn't rendered for the button when dropdown=true
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4493">Issue 4493</a>
-            SelectOneButton / SelectManyButton options not visually selectable after validation error
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4535">Issue 4535</a>
-            Decimal formatting broken in spinner
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4576">Issue 4576</a>
-            AutoComplete onstart ignores return value
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4691">Issue 4691</a>
-            Calendar component vulnerable to XSS attack
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5255">Issue 5255</a>
-            TreeTable throws IndexOutOfBoundsException
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5310">Issue 5310</a>
-            Allow ajax update on p:clock
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5336">Issue 5336</a>
-            Missing resource dependency for Growl and Panel
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5371">Issue 5371</a>
-            selectBooleanCheckbox itemLabel is not displayed to the right of the check box
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5383">Issue 5383</a>
-            Tree renders p:treeNode with rendered="false"
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5386">Issue 5386</a>
-            Spinner displays null with prefix-suffix and null value
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5387">Issue 5387</a>
-            Spinner should not change empty value to zero on focus
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5388">Issue 5388</a>
-            Filtering fails with input components inside DataTable
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5389">Issue 5389</a>
-            AutoComplete oncomplete callback ignored.
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5409">Issue 5409</a>
-            Inconsistent behavior p:calendar  today button on IE and non IE
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5418">Issue 5418</a>
-            Event-Input Processing Issue with Dynamic Columns
-          </li>
-        </ul>
-
-        <h4>Enhancements</h4>
-
-        <ul>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=3652">Issue 3652</a>
-            Add clear button to remove FileUpload Messages
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5334">Issue 5334</a>
-            ReadOnly check for collapsed ValueExpression of Panel
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=5378">Issue 5378</a>
-            Update to jQplot 1.0.8
-          </li>
-        </ul>
-
-        <h4>New Feature</h4>
-
-        <ul>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4330">Issue 4330</a>
-            Facet feature for Inplace
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4543">Issue 4543</a>
-            Add .ui-panelgrid-even .ui-panelgrid-odd styleClass to panelGrid
-          </li>
-          <li>
-            <a href="http://code.google.com/p/primefaces/issues/detail?id=4780">Issue 4780</a>
-            Accordion Panel: impossible to register listener on tab close (collapse)
-          </li>
-        </ul>
-
-      </div>
-
-      <div id="push"></div>
-    </div>
-
-    <div id="footer">
-      <div class="container">
-        <p class="muted credit">Unofficial Resources for <a href="http://www.primefaces.org">PrimeFaces</a>.</p>
-      </div>
-    </div>
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/google-code-prettify.js"></script>
-
-    <script type="text/javascript">
-!function ($) {
-
-  $(function(){
-
-    // make code pretty
-    window.prettyPrint && prettyPrint()
-
-  })
-
-}(window.jQuery)
-    </script>
-
-  </body>
-</html>
