--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@ prettify: true
 
 <p>Unofficial Maven Repository for non-publicly released PrimeFaces versions.</p>
 
+<div class="alert alert-danger">
+  <h4>Warning!</h4>
+  From 3.5.9-UR version the feature <a href="{{ site.issue_tracker }}5850">5850</a> ended up coming down from upstream version.
+  See the <a href="/widgetvar-workaround.html">workaround</a>.
+</div>
+
 <table class="table table-bordered table-hover">
   <thead>
     <tr>
