Fixes for cleaner explanations and grammatical mistake.

--- a/widgetvar-workaround.html
+++ b/widgetvar-workaround.html
@@ -6,7 +6,7 @@ prettify: true
 
 <h3>Workaround for widgetVar undefined</h3>
 
-<p>The feature <a href="{{ site.issue_tracker }}5850">5850</a> changed the scope of widgetVar's,
+<p>The feature <a href="{{ site.issue_tracker }}5850">5850</a> changed widgetVar's scope,
 removing them from window to <strong>new function</strong> <code>PF('widgetVar')</code>.</p>
 
 <pre class="prettyprint lang-js">
@@ -20,4 +20,7 @@ PF('myWidgetVar').samplemethod();
 var myWidgetVar = PF('myWidgetVar');
 myWigetVar.samplemethod();
 </pre>
+
+<p>It's a feature that ended up coming down from upstream version not intentionally. Therefore,
+it will be removed in the <strong>3.5.11-UR</strong> release.</p>
 
