--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ prettify: true
 
 <div class="alert alert-danger">
   <h4>Warning!</h4>
-  From 3.5.9-UR version the feature <a href="{{ site.issue_tracker }}5850">5850</a> ended up coming down from upstream version.
-  See the <a href="/widgetvar-workaround.html">workaround</a>.
+  In the <strong>3.5.9-UR</strong> and <strong>3.5.10-UR</strong> releases the feature <a href="{{ site.issue_tracker }}5850">5850</a> ended up coming down from upstream version.
+  See the <a href="/widgetvar-workaround.html">workaround</a> if you are using one of them.
 </div>
 
 <table class="table table-bordered table-hover">
