Added new feature in changelog for 3.5.11 realease

--- a/changelog/3.5.11.html
+++ b/changelog/3.5.11.html
@@ -29,5 +29,7 @@ changelog:
      txt: "Deferred Loading OutputPanel"
    - num: 5976
      txt: "New Component: Sticky"
+   - num: 0
+     txt: "New stickyHeader attribute in DataTable"
 ---
 
