--- a/changelog/3.5.13.html
+++ b/changelog/3.5.13.html
@@ -11,6 +11,8 @@ changelog:
      txt: "Potential javascript error on Tooltip"
    - num: 6036
      txt: "Layout component border-issues with IE"
+   - num: 6015
+     txt: "AjaxBehaviour.saveState indexoutofbounds exception <span class=\"label\">UR2</span>"
 
   enhancements:
    - num: 5821
@@ -22,4 +24,7 @@ changelog:
    - num: 6003
      txt: "Global attribute for outputPanel deferred loading."
 ---
+
+<p>This version has two releases (<strong>UR</strong> and <strong>UR2</strong>). The second release
+has the fix to <code>IndexOutOfBoundException</code> in <code>AjaxBehaviour.saveState</code>.</p>
 
