Fixed english grammar issues.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@ prettify: true
 
 <h3>Why?</h3>
 
-<p>The <a href="http://blog.primefaces.org/?p=2443">New Maintanance Policy</a> don't have freely available releases starting with PrimeFaces 3.5.</p>
+<p>The <a href="http://blog.primefaces.org/?p=2443">New Maintanance Policy</a> doesn't have freely available releases starting with PrimeFaces 3.5.</p>
 
 <div class="alert alert-success">
-  This work initiative aims to provide freely available repositories with the result of the integration of the changes from
+  This work initiative aims to provide freely available repositories with the result of an integration effort of each change from
   <a href="https://code.google.com/p/primefaces/source/list">original <em>open source</em> repository</a>.
   All sources came from the original repository under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>.
   The <strong>sources from this work</strong> are all hosted in <a href="https://github.com/primefaces/primefaces">GitHub</a>.
@@ -22,7 +22,7 @@ prettify: true
 
 <div class="alert alert-danger">
   <strong>Need support?</strong> See the <a href="http://www.primefaces.org/support.html">official support page</a>.
-  The releases distributed here are not officially supported. Use at your own risk, as the respective clauses in
+  The releases distributed here are not officially supported. Use at your own risk, according to the respective clauses in
   <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>.
 </div>
 
@@ -56,7 +56,7 @@ prettify: true
   </tbody>
 </table>
 
-<p>Downloading <strong>official</strong> and <strong>unofficial</strong> releases with Maven:</p>
+<p>Downloading <strong>unofficial</strong> releases with Maven:</p>
 
 <pre class="prettyprint lang-xml">
 &lt;repository&gt;
@@ -79,10 +79,11 @@ prettify: true
 </div>
 
 <div class="alert alert-danger">
-  From <strong>3.5.8-UR</strong> releases has one bug in <code>AjaxBehaviour.saveState</code>. In the <strong>3.5.13-UR2</strong> release has fixed.
+  From <strong>3.5.8-UR</strong> to <strong>3.5.13-UR</strong> releases, there is one bug in <code>AjaxBehaviour.saveState</code>.
+  From the <strong>3.5.13-UR2</strong> release on, the bug was fixed.
 </div>
 
-<h3>Lastest Official Releases</h3>
+<h3>Latest Official Releases</h3>
 
 <p>Please go to the <a href="http://www.primefaces.org">Official Site</a> for download official releases.</p>
 
